<resources>
    <string name="app_name">Calculator_Kh</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="divide">/</string>
    <string name="multiply">*</string>
    <string name="equally">=</string>
    <string name="dot">.</string>
    <string name="clear">C</string>
    <string name="mainText">Calculator</string>
    <string name="main_themes_text">Выберите цвет темы:</string>
    <string name="red_themes">Red_Themes</string>
    <string name="green_themes">Green_Themes</string>
    <string name="blue_themes">Blue_Themes</string>
    <string name="button_change_themes">Change_Themes</string>
    <string name="Button_install">Install</string>
    <string name="default_themes">default_themes</string>
</resources>