<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    tools:context=".MainActivity"
    android:background="@drawable/horizon_sky_sunrise">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/header_title"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:gravity="end"
        android:text="@string/mainText"
        android:textSize="@dimen/textSizeTitle"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mainView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:gravity="center"

        android:textSize="@dimen/textSizeVertical"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_title" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/clear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:textSize="@dimen/keyVerticalTextSize"
        app:layout_constraintBottom_toTopOf="@+id/_2"
        app:layout_constraintEnd_toStartOf="@+id/plus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_4"
        android:textSize="@dimen/keyVerticalTextSize"
        app:layout_constraintBottom_toTopOf="@+id/_7"
        app:layout_constraintEnd_toStartOf="@+id/_5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/_1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_2"
        android:textSize="@dimen/keyVerticalTextSize"
        app:layout_constraintBottom_toTopOf="@+id/_5"
        app:layout_constraintEnd_toStartOf="@+id/_3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/_1"
        app:layout_constraintTop_toBottomOf="@+id/clear" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/divide"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/divide"
        android:textSize="@dimen/keyVerticalTextSize"
        app:layout_constraintBottom_toTopOf="@+id/multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/_6"
        app:layout_constraintTop_toBottomOf="@+id/minus" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/minus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/minus"
        android:textSize="@dimen/keyVerticalTextSize"
        app:layout_constraintBottom_toTopOf="@+id/divide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/_3"
        app:layout_constraintTop_toBottomOf="@+id/plus" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_1"
        android:textSize="@dimen/keyVerticalTextSize"
        app:layout_constraintBottom_toTopOf="@+id/_4"
        app:layout_constraintEnd_toStartOf="@+id/_2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clear"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/_8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_8"
        android:textSize="@dimen/keyVerticalTextSize"
        app:layout_constraintBottom_toTopOf="@+id/_0"
        app:layout_constraintEnd_toStartOf="@+id/_9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/_7"
        app:layout_constraintTop_toBottomOf="@+id/_5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/_7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_7"
        android:textSize="@dimen/keyVerticalTextSize"
        app:layout_constraintBottom_toTopOf="@+id/dot"
        app:layout_constraintEnd_toStartOf="@+id/_8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/_4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/equally"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/equally"
        android:textSize="@dimen/keyVerticalTextSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/_0"
        app:layout_constraintTop_toBottomOf="@+id/multiply" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/multiply"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/multiply"
        android:textSize="@dimen/keyVerticalTextSize"
        app:layout_constraintBottom_toTopOf="@+id/equally"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/_9"
        app:layout_constraintTop_toBottomOf="@+id/divide" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textSize="@dimen/keyVerticalTextSize"
        app:layout_constraintEnd_toStartOf="@+id/equally"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/dot"
        app:layout_constraintTop_toBottomOf="@+id/_8" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_3"
        android:textSize="@dimen/keyVerticalTextSize"
        app:layout_constraintBottom_toTopOf="@+id/_6"
        app:layout_constraintEnd_toStartOf="@+id/minus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/_2"
        app:layout_constraintTop_toBottomOf="@+id/clear" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plus"
        android:textSize="@dimen/keyVerticalTextSize"
        app:layout_constraintBottom_toTopOf="@+id/minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/clear"
        app:layout_constraintTop_toBottomOf="@+id/guideline"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/_6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_6"
        android:textSize="@dimen/keyVerticalTextSize"
        app:layout_constraintBottom_toTopOf="@+id/_9"
        app:layout_constraintEnd_toStartOf="@+id/divide"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/_5"
        app:layout_constraintTop_toBottomOf="@+id/_3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/_9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_9"
        android:textSize="@dimen/keyVerticalTextSize"
        app:layout_constraintBottom_toTopOf="@+id/equally"
        app:layout_constraintEnd_toStartOf="@+id/multiply"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/_8"
        app:layout_constraintTop_toBottomOf="@+id/_6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/_5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_5"
        android:textSize="@dimen/keyVerticalTextSize"
        app:layout_constraintBottom_toTopOf="@+id/_8"
        app:layout_constraintEnd_toStartOf="@+id/_6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/_4"
        app:layout_constraintTop_toBottomOf="@+id/_2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dot"
        android:textSize="@dimen/keyVerticalTextSize"
        app:layout_constraintEnd_toStartOf="@+id/_0"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/_7" />

</androidx.constraintlayout.widget.ConstraintLayout>