<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/horizon_sky_sunrise"
    tools:context=".Themes_activity">

    <TextView
        android:id="@+id/textViewThemes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_themes_text"
        android:textColor="@color/white"
        android:textSize="@dimen/main_text_view_themes_text_size"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="40dp"
        android:layout_marginStart="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/buttonInstall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewThemes">

        <RadioButton
            android:id="@+id/rb_default_themes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_themes"
            android:textColor="@color/white"
            android:textSize="@dimen/keyHorizontalTextSize"
            app:layout_constraintBottom_toTopOf="@+id/rb_red_themes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />


        <RadioButton
            android:id="@+id/rb_red_themes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/red_themes"
            android:textColor="@color/white"
            android:textSize="@dimen/keyHorizontalTextSize"
            app:layout_constraintBottom_toTopOf="@+id/rb_green_themes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rb_default_themes"
            app:layout_constraintVertical_chainStyle="packed" />

        <RadioButton
            android:id="@+id/rb_green_themes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/green_themes"
            android:textColor="@color/white"
            android:textSize="@dimen/keyHorizontalTextSize"
            app:layout_constraintBottom_toTopOf="@+id/rb_blue_themes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rb_red_themes" />

        <RadioButton
            android:id="@+id/rb_blue_themes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blue_themes"
            android:textColor="@color/white"
            android:textSize="@dimen/keyHorizontalTextSize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rb_green_themes" />
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonInstall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Button_install"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
</androidx.constraintlayout.widget.ConstraintLayout>